# LichtFeld-Studio

./: .gitignore  CMakeLists.txt  README.md  build_lichtfeld.ps1  vcpkg.json
.github/workflows/: clang-format.yml  nightly.yml  ubuntu.yml  ubuntu2.yml  windows.yml
cmake/: BundleDependencies.cmake  FetchUV.cmake
cmake/templates/: run_lichtfeld.sh.in
docker/: Dockerfile  entrypoint.sh
docs/: building_and_distribution.md
eval/: adc_optimization_params.json  benchmark_mipnerf360_adc.ps1  benchmark_mipnerf360_adc.sh  default_optimization_params.json  legacy_benchmark_mipnerf360_adc.sh  mcmc_optimization_params.json  timing_mipnerf360_adc.sh
include/core/: application.hpp  argument_parser.hpp  camera.hpp  camera_types.h  converter.hpp  cuda_debug.hpp  events.hpp  gradient_check.hpp  image_io.hpp  logger.hpp  parameters.hpp  point_cloud.hpp  sogs.hpp  splat_data.hpp  splat_data_export.hpp  splat_data_transform.hpp  tensor.hpp  tensor_debug.hpp  tensor_trace.hpp  training_snapshot.hpp
include/core_new/: camera.hpp  events.hpp  parameters.hpp  splat_data.hpp  splat_data_export.hpp  splat_data_transform.hpp  tensor.hpp  tensor_fwd.hpp
include/geometry/: bounding_box.hpp
include/geometry_new/: bounding_box.hpp
include/rendering/: render_constants.hpp  rendering.hpp
include/rendering_new/: rendering.hpp
include/visualizer/: visualizer.hpp
parameter/: default_optimization_params.json  mcmc_optimization_params.json
src/: application.cpp  main.cpp
src/app/: application.cpp  main.cpp  splash_screen.cpp
src/core/: CMakeLists.txt  argument_parser.cpp  camera.cpp  converter.cpp  cuda_version.cpp  image_io.cpp  logger.cpp  observable.hpp  parameters.cpp  path_utils.hpp  sogs.cpp  splat_data.cpp  splat_data_export.cpp  splat_data_transform.cpp  tensor_debug.cpp  training_snapshot.cpp
src/core/cuda/: CMakeLists.txt  memory_arena.cu  memory_arena.hpp  tensor_debug.cu
src/core/cuda/kernels/: kdtree_kmeans.cu  kdtree_kmeans.hpp  kmeans_new.cu  morton_encoding_new.cu
src/core/cuda/lanczos_resize/: lanczos_resize.cu  lanczos_resize.hpp
src/core/event_bridge/: CMakeLists.txt  command_center_bridge.cpp  command_center_bridge.hpp  control_boundary.cpp  control_boundary.hpp  scoped_handler.cpp  scoped_handler.hpp
src/core/include/core/: argument_parser.hpp  cuda_version.hpp  events.hpp  executable_path.hpp  logger.hpp  parameters.hpp  splat_data.hpp  splat_data_mirror.hpp
src/core/tensor/: CMakeLists.txt  pinned_memory_allocator.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_dot_optimized.cu  tensor_factory.cpp  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_matrix_ops.cu  tensor_movement_ops.cpp  tensor_nn_ops.cpp  tensor_nn_ops.cu  tensor_ops.cu  tensor_random_ops.cpp  tensor_row_proxy.cpp  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/core/tensor/internal/: cuda_memory_guard.hpp  cuda_stream_context.hpp  cuda_stream_pool.hpp  deferred_free_queue.hpp  gpu_arena_allocator.hpp  gpu_config.hpp  gpu_slab_allocator.hpp  memory_pool.hpp  packed128.cuh  size_bucketed_pool.hpp  tensor_broadcast_ops.cuh  tensor_expr.hpp  tensor_functors.hpp  tensor_impl.hpp  tensor_nn_ops.hpp  tensor_ops.hpp  tensor_serialization.hpp  tensor_vectorized_ops.cuh
src/core_new/: CMakeLists.txt  argument_parser.cpp  camera.cpp  converter.cpp  logger.cpp  parameters.cpp  splat_data.cpp  splat_data_export.cpp  splat_data_transform.cpp
src/geometry/: CMakeLists.txt  bounding_box.cpp  euclidean_transform.cpp
src/geometry_new/: bounding_box.cpp
src/python/: CMakeLists.txt  lichtfeld.pyi  package_manager.cpp  package_manager.hpp  py_panel_registry.cpp  py_panel_registry.hpp  python_runtime.cpp  runner.cpp  runner.hpp  subprocess.cpp  subprocess.hpp  ui_hooks.cpp  ui_hooks.hpp  uv_runner.cpp  uv_runner.hpp
src/python/lfs/: module.cpp  py_io.cpp  py_io.hpp  py_packages.cpp  py_packages.hpp  py_params.cpp  py_plugins.cpp  py_plugins.hpp  py_scene.cpp  py_scene.hpp  py_tensor.cpp  py_tensor.hpp  py_ui.cpp  py_ui.hpp
src/python/lfs_plugins/: __init__.py  errors.py  installer.py  manager.py  panels.py  plugin.py  watcher.py
src/rendering/rasterizer/: CMakeLists.txt
src/rendering/rasterizer/gsplat_fwd/: CMakeLists.txt  Common.h  Intersect.cpp  Intersect.h  IntersectTile.cu  Ops.h  Projection.cpp  Projection.h  ProjectionUT3DGSFused.cu  Rasterization.cpp  Rasterization.h  RasterizeToPixelsFromWorld3DGSFwd.cu  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalHarmonicsCUDA.cu  Utils.cuh
src/rendering/rasterizer/rasterization/include/: buffer_utils.h  forward.h  gsplat_forward.h  kernel_utils.cuh  kernels_forward.cuh  rasterization_api_tensor.h  rasterization_config.h
src/rendering/rasterizer/rasterization/src/: forward.cu  gsplat_forward.cu  rasterization_api_tensor.cu
tests/: CMakeLists.txt  benchmark_adc.cpp  benchmark_background_blend.cpp  benchmark_default_strategy.cpp  benchmark_grad_alpha_layout.cpp  benchmark_pipelined_loader.cpp  benchmark_ppisp_controller.cpp  benchmark_slice_assignment.cpp  benchmark_strided_tensors.cpp  compare_ply_spz.cpp  profile_adam_optimizer.cpp  profile_adam_optimizer.cpp.disabled  test_adc.cpp  test_adc_comparison.cpp  test_adc_tensor_ops.cpp  test_add_new_gs_tensor_ops.cpp  test_allocator_benchmark.cpp  test_background_image.cpp  test_bool_any_all.cpp  test_bool_reduction.cpp  test_bug_regressions.cpp  test_bugs_found.cpp  test_checkpoint_resume.cpp  test_controller_memory.cpp  test_cpu_dtype_conversions.cpp  test_cpu_large_tensor_bugs.cpp  test_critical_fixes.cpp  test_cub_reduction_benchmark.cpp  test_cuda_device_state.cpp  test_cuda_stream_sync.cpp  test_curand_buffer_overflow.cpp  test_default_strategy.cpp  test_default_strategy_comparison.cpp  test_default_strategy_operations_comparison.cpp  test_default_strategy_real_conditions.cpp  test_default_strategy_tensor_ops.cpp  test_default_strategy_vs_reference.cpp  test_densification.cpp  test_dtype_operations_comprehensive.cpp  test_export_comparison.cpp  (+96 more)
(+488 files in other folders)
